src/objects/CH_NotificationSubscriptionDetail__c.object
<CustomObject>
    <description>NOKIASC-29137:Child object for Notifiction Subscription Object</description>
    <fields>
        <fullName>CH_AttributeCode__c</fullName>
        <description>NOKIASC-29137:To store notification subscription attribute code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_AttributeName__c</fullName>
        <description>NOKIASC-29137:To store Notification Subscription attribute</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_AttributeRecordID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_AttributeType__c</fullName>
        <description>NOKIASC-29137:To store notification subscription attribute  type</description>
        <label>Attribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Legal Entity Account</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Workgroup</fullName>
                </value>
                <value>
                    <fullName>Parent Account</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_NotificationSubscription__c</fullName>
        <description>NOKIASC-29137:This field is created for master detail relationship</description>
        <label>Subscription ID</label>
        <referenceTo>CH_NotificationSubscription__c</referenceTo>
        <relationshipLabel>Notification Subscription Details</relationshipLabel>
        <relationshipName>Notification_Subscription_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Notification Subscription Detail</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Subscription Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>